[tool.poetry]
name = "message_bridge"
version = "0.1.0"
description = "A message dispatcher library for handling API and brokers"
authors = ["Emrah Burak Gürbüz <emrahburak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.1"
pika = "1.3.2"
redis = "6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
