[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "message_bridge"
version = "0.1.0"
description = "A lightweight message bridge library with broker, dispatcher and circuit breaker"
authors = [
    { name="Emrah Burak Gürbüz", email="gemrahburak@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["message", "broker", "dispatcher", "circuit-breaker"]
requires-python = ">=3.10,<3.12"

# Üçüncü taraf bağımlılıklar
dependencies = [
    "requests>=2.25.1,<3.0.0",
    "pika==1.3.2",
    "redis==6.0.0"
]
